@@ -2407,6 +2407,13 @@ Example  : pray "sense chaos"\n\r\
 The caster gains the ability to sense chaotic creatures and items.  They will glow maroon to \
 the caster.
 
+PRAYER_SENSECHANTS=PRAYER_SENSE_CHANTS
+PRAYER_SENSE_CHANTS=<ABILITY>\
+Usage    : PRAY "SENSE CHANTS" [TARGET NAME]\n\r\
+Example  : pray "sense chants" bob\n\r\
+The caster gains the ability to look into the target and see \
+their known chants.
+
 PRAYER_SENSEDEVOTION=PRAYER_SENSE_DEVOTION
 PRAYER_SENSE_DEVOTION=<ABILITY>\
 Usage    : PRAY "SENSE DEVOTION" [TARGET]\n\r\
