@@ -16,6 +16,7 @@
  15. CLASSSYSTEM has new class limit boundary options, and new GAIN and SWITCH for train cost.
  16. New achievement flag: REMORT, for forcing remorting players to re-acquire player achivements.
  17. Something new will go here eventually
+ 18. New prayer: sense chants
   
 # Build 5.9.11.1 Release 02/26/2021
   Bug Fix Release:
